--- a/cadastro.html
+++ b/cadastro.html
@@ -21,9 +21,15 @@
         <div class="field">
             <label for="categoria">Categoria:</label>
             <select name="categoria" id="categoria">
+                <option value="0" selected disabled></option>
                 <option value="1">Fundamental</option>
                 <option value="2">Médio</option>
             </select>
+        </div>
+
+        <div class="field">
+            <label for="grau">Grau:</label>
+            <select name="grau" id="grau"></select>
         </div>
 
         <button id="enviar">Enviar</button>
