--- a/cadastro.html
+++ b/cadastro.html
@@ -9,12 +9,12 @@
 <body>
     <div class="registro">
         <div class="field">
-            <label for="codaluno">Código do Aluno:</label>
+            <label for="codAluno">Código do Aluno:</label>
             <input type="number" name="codAluno" id="codAluno">
         </div>
         
         <div class="field">
-            <label for="codaluno">Nome do Aluno:</label>
+            <label for="nomeAluno">Nome do Aluno:</label>
             <input type="text" name="nomeAluno" id="nomeAluno">
         </div>
 
@@ -30,6 +30,38 @@
         <div class="field">
             <label for="grau">Grau:</label>
             <select name="grau" id="grau"></select>
+        </div>
+
+        <div class="field">
+            <div class="field2">
+                <label for="n1">Informe a primeira nota:</label>
+                <input type="number" name="nota" id="n1">
+            </div>
+
+            <div class="field2">
+                <label for="2">Informe a segunda nota:</label>
+                <input type="number" name="nota" id="2">
+            </div>
+
+            <div class="field2">
+                <label for="3">Informe a terceira nota:</label>
+                <input type="number" name="nota" id="3">
+            </div>
+
+            <div class="field2">
+                <label for="4">Informe a quarta nota:</label>
+                <input type="number" name="nota" id="4">
+            </div>
+
+            <div class="field2">
+                <label for="5">Informe a quinta nota:</label>
+                <input type="number" name="nota" id="5">
+            </div>
+
+            <div class="field2">
+                <label for="6">Informe a sexta nota:</label>
+                <input type="number" name="nota" id="6">
+            </div>
         </div>
 
         <button id="enviar">Enviar</button>
