--- a/cadastro.html
+++ b/cadastro.html
@@ -39,27 +39,27 @@
             </div>
 
             <div class="field2">
-                <label for="2">Informe a segunda nota:</label>
+                <label for="n2">Informe a segunda nota:</label>
                 <input type="number" name="nota" id="2">
             </div>
 
             <div class="field2">
-                <label for="3">Informe a terceira nota:</label>
+                <label for="n3">Informe a terceira nota:</label>
                 <input type="number" name="nota" id="3">
             </div>
 
             <div class="field2">
-                <label for="4">Informe a quarta nota:</label>
+                <label for="n4">Informe a quarta nota:</label>
                 <input type="number" name="nota" id="4">
             </div>
 
             <div class="field2">
-                <label for="5">Informe a quinta nota:</label>
+                <label for="n5">Informe a quinta nota:</label>
                 <input type="number" name="nota" id="5">
             </div>
 
             <div class="field2">
-                <label for="6">Informe a sexta nota:</label>
+                <label for="n6">Informe a sexta nota:</label>
                 <input type="number" name="nota" id="6">
             </div>
         </div>
